Adding responsive nav bar

--- a/templates/explore_data.html
+++ b/templates/explore_data.html
@@ -501,7 +501,12 @@
         <h1>Sales Reporting System</h1>
     </header>
     <nav>
-        <ul>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="nav-list">
             <li><a href="/">Files</a></li>
             <li><a href="/tables">Tables</a></li>
             <li><a href="/stored_procedures">Stored Procedures</a></li>
