--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,12 @@
         <h1>Sales Reporting System</h1>
     </header>
     <nav>
-        <ul>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="nav-list">
             <li><a href="/">Files</a></li>
             <li><a href="/tables">Tables</a></li>
             <li><a href="/stored_procedures">Stored Procedures</a></li>
@@ -149,6 +154,14 @@
                     alert('An error occurred while attempting to delete files.');
                 });
             }
+        });
+
+        // JavaScript for mobile menu toggle
+        const mobileMenu = document.getElementById('mobile-menu');
+        const navList = document.querySelector('.nav-list');
+
+        mobileMenu.addEventListener('click', () => {
+            navList.classList.toggle('active');
         });
     </script>
 </body>
