--- a/static/css/shared-styles.css
+++ b/static/css/shared-styles.css
@@ -25,9 +25,25 @@ h1, h2 {
 nav {
     width: 100%;
     background-color: #333;
+    padding: 7px 0; /* Adjust this padding to control the thickness */
+
 }
 
-nav ul {
+nav .menu-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    padding: 3px 7px;
+}
+
+nav .menu-toggle .bar {
+    height: 2px;
+    width: 28px;
+    background-color: white;
+    margin: 4px 0;
+}
+
+nav .nav-list {
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -38,22 +54,42 @@ nav ul {
     margin-right: auto;
 }
 
-nav ul li {
+nav .nav-list li {
     padding: 10px 20px;
     white-space: nowrap; /* Prevent wrapping of text */
-
 }
 
-nav ul li a {
+nav .nav-list li a {
     color: white;
     text-decoration: none;
     transition: background-color 0.3s;
 }
 
-nav ul li a:hover {
+nav .nav-list li a:hover {
     background-color: #5cb85c;
     color: white;
     border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+    nav .menu-toggle {
+        display: flex;
+    }
+
+    nav .nav-list {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    nav .nav-list.active {
+        display: flex;
+    }
+
+    nav .nav-list li {
+        width: 100%;
+        text-align: center;
+    }
 }
 
 /* Container styles */
@@ -223,7 +259,6 @@ table, th, td {
 .overflow-container {
     overflow-x: auto;
 }
-
 
 /* Styles for table_data.html */
 .form-group {
