--- a/templates/table_data.html
+++ b/templates/table_data.html
@@ -25,8 +25,13 @@
     <header>
         <h1>Sales Reporting System</h1>
     </header>
-    <nav>
-        <ul>
+        <nav>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="nav-list">
             <li><a href="/">Files</a></li>
             <li><a href="/tables">Tables</a></li>
             <li><a href="/stored_procedures">Stored Procedures</a></li>
