Adding responsive nav bar for all pages

--- a/templates/table_data.html
+++ b/templates/table_data.html
@@ -120,6 +120,14 @@
                     console.error('Error:', error);
                 });
         }
+
+                // JavaScript for mobile menu toggle
+        const mobileMenu = document.getElementById('mobile-menu');
+        const navList = document.querySelector('.nav-list');
+
+        mobileMenu.addEventListener('click', () => {
+            navList.classList.toggle('active');
+        });
     </script>
 </body>
 </html>
