--- a/templates/visualizations.html
+++ b/templates/visualizations.html
@@ -35,5 +35,14 @@
             <iframe title="SalesRepViz_1" src="https://app.powerbi.com/view?r=eyJrIjoiZmFkZTU0YmUtYTJlZi00ZjhmLWE5ZjktYWViYjcxOWJmNWMzIiwidCI6IjYwOTU2ODg0LTEwYWQtNDBmYS04NjNkLTRmMzJjMWUzYTM3YSIsImMiOjF9" allowFullScreen="true"></iframe>
         </div>
     </div>
+    <script>
+                // JavaScript for mobile menu toggle
+        const mobileMenu = document.getElementById('mobile-menu');
+        const navList = document.querySelector('.nav-list');
+
+        mobileMenu.addEventListener('click', () => {
+            navList.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
