--- a/templates/explore_data.html
+++ b/templates/explore_data.html
@@ -1373,6 +1373,14 @@ erDiagram
             link.click();
         }
         setVisualizeButtonInitialState();
+
+                // JavaScript for mobile menu toggle
+        const mobileMenu = document.getElementById('mobile-menu');
+        const navList = document.querySelector('.nav-list');
+
+        mobileMenu.addEventListener('click', () => {
+            navList.classList.toggle('active');
+        });
     </script>
 </body>
 </html>
