--- a/templates/stored_procedures.html
+++ b/templates/stored_procedures.html
@@ -99,6 +99,14 @@
                 alert('An error occurred while attempting to create procedures.');
             });
         });
+
+                // JavaScript for mobile menu toggle
+        const mobileMenu = document.getElementById('mobile-menu');
+        const navList = document.querySelector('.nav-list');
+
+        mobileMenu.addEventListener('click', () => {
+            navList.classList.toggle('active');
+        });
     </script>
 </body>
 </html>
