--- a/static/css/shared-styles.css
+++ b/static/css/shared-styles.css
@@ -23,10 +23,11 @@ h1, h2 {
 
 /* Navigation styles */
 nav {
-    width: 100%;
+    width: 100%; /* Ensure nav covers the full width */
     background-color: #333;
     padding: 7px 0; /* Adjust this padding to control the thickness */
-
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 0; /* Ensure there is no margin */
 }
 
 nav .menu-toggle {
@@ -49,9 +50,7 @@ nav .nav-list {
     margin: 0;
     display: flex;
     justify-content: center;
-    max-width: 500px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%; /* Ensure the nav-list covers the full width */
 }
 
 nav .nav-list li {
@@ -71,6 +70,7 @@ nav .nav-list li a:hover {
     border-radius: 5px;
 }
 
+/* Responsive Styles for Mobile View */
 @media (max-width: 768px) {
     nav .menu-toggle {
         display: flex;
@@ -79,7 +79,7 @@ nav .nav-list li a:hover {
     nav .nav-list {
         display: none;
         flex-direction: column;
-        width: 100%;
+        width: 100%; /* Ensure the nav-list covers the full width */
     }
 
     nav .nav-list.active {
